@@ -26,9 +26,6 @@
  * @bug 8035105
  * @summary DNS resource record parsing
  * @modules jdk.naming.dns/com.sun.jndi.dns:+open
- *
- * @compile --add-modules jdk.naming.dns Parser.java
- * @run main Parser
  */
 
 import com.sun.jndi.dns.ResourceRecord;
